# cashlog

./: .gitignore  Cargo.toml  README.md  cashlog.sql  cashlog.toml  migration-1.sql  rustfmt.toml
src/: common.rs  db.rs  logging.rs  main.rs  model.rs  tmpl.rs  util.rs
src/page/: about.rs  add_bank_account.rs  bank_accounts.rs  currency.rs  delete.rs  edit.rs  export.rs  graph.rs  logout.rs  main.rs  mod.rs  new_session.rs  profile.rs
src/page/add/: mod.rs
src/tmpl/: about.rs  add.rs  add_bank_account.rs  bank_accounts.rs  common.rs  currency.rs  edit.rs  export.rs  graph.rs  logout.rs  main.rs  mod.rs  new_session.rs  profile.rs
