[package]
name = "cashlog"
version = "0.1.0"
authors = ["Maciej Pietrzak"]

[dependencies]
# mount = ">=0.2"
# staticfile = "*"
cookie = "^0.8"
env_logger = ">=0.3"
hyper = ">=0.9"
iron = ">=0.3"
lettre = "^0.6"
log = ">=0.3"
maud = { version = "*", features = ["iron"] }
maud_macros = "*"
mime = "*"
params = "*"
plugin = "*"
postgres = { version = ">0.12", features = ["with-time"] }
psutil = { version = ">=1" }
r2d2 = ">=0.7.1"
r2d2_postgres = ">=0.11.1"
router = ">=0.1.1"
serde = ">=0.9, <1.1"
serde_derive = ">=0.9, <1.1"
serde_json = ">=0.9, <1.1"
time = "*"
toml = "^0.4"
url = "*"
uuid = { version = "^0.5", features = ["v4"] }
logger = "*"
