[package]
name = "cashlog"
version = "0.2.0"
authors = ["Maciej Pietrzak"]
edition = "2018"

[dependencies]
actix-rt = "^1.1.1"
actix-web = "^3.3.2"
chrono = "^0.4.19"
env_logger = "^0.9"
lettre = "^0.9.6"
lettre_email = "^0.9"
log = "^0.4.14"
maud = { version = "^0.22.3" }
maud_macros = "^0.22.3"
postgres = { version = "^0.19", features = ["with-chrono-0_4"] }
# psutil = "^3.2.1"
r2d2 = "^0.8.9"
r2d2_postgres = "^0.18.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
time = "^0.3.4"
toml = "^0.4"
url = "*"
uuid = { version = "^0.5", features = ["v4"] }
